Payment interface implemented (#82)
